@@ -69,7 +69,7 @@ class Roda
 
         # Store a new template block and options for the given template name.
         def template(name, options=nil, &block)
-          opts[:named_templates][name.to_s] = [options, block].freeze
+          opts[:named_templates][name.to_s] = [options, define_roda_method("named_templates_#{name}", 0, &block)].freeze
           nil
         end
       end
@@ -80,14 +80,14 @@ class Roda
         # If a template name is given and it matches a named template, call
         # the named template block to get the inline template to use.
         def find_template(options)
-          if options[:template] && (template_opts, block = opts[:named_templates][template_name(options)]; block)
+          if options[:template] && (template_opts, meth = opts[:named_templates][template_name(options)]; meth)
             if template_opts
               options = Hash[template_opts].merge!(options)
             else
               options = Hash[options]
             end
 
-            options[:inline] = instance_exec(&block)
+            options[:inline] = send(meth)
 
             super(options)
           else
